# api/api.yml
@@ -24,6 +24,8 @@ info:
   title: Argos Service
   license:
     name: GPL v3
+    #identifier: GPL
+    
 servers:
   - url: /api
 security:
@@ -808,7 +810,7 @@ paths:
             type: array
             maxItems: 256
             items:
-              $ref: "#/components/schemas/SHA256Hash"
+              $ref: "#/components/schemas/HashString"
 
       responses:
         '200':
@@ -842,7 +844,7 @@ paths:
           description: hash of product or material
           required: false
           schema:
-            $ref: "#/components/schemas/SHA256Hash"
+            $ref: "#/components/schemas/HashString"
       responses:
         '200':
           description: array of links
@@ -1128,6 +1130,81 @@ paths:
           $ref: '#/components/responses/Error'
         '500':
           $ref: '#/components/responses/Error'
+
+##############################################################
+#                                                            #
+#    Begin Attestation Paths                                 #
+#                                                            #
+##############################################################  
+  /supplychains/{supplyChainId}/attest:
+    get:
+      summary: find attestations
+      operationId: getAttestations
+      tags:
+        - attestation
+      parameters:
+        - name: supplyChainId
+          in: path
+          description: supply chain id
+          required: true
+          schema:
+            $ref: "#/components/schemas/UUID"
+        - name: hash
+          in: query
+          description: hash of subject
+          required: false
+          schema:
+            $ref: "#/components/schemas/HashString"
+      responses:
+        '200':
+          description: array of statements
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Attestation"
+        '400':
+          $ref: '#/components/responses/Error'
+        '500':
+          $ref: '#/components/responses/Error'
+    post:
+      summary: Create a attestation
+      operationId: createAttestation
+      tags:
+        - attestation
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: supplyChainId
+          in: path
+          description: supply chain id
+          required: true
+          schema:
+            $ref: "#/components/schemas/UUID"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Attestation"
+      responses:
+        '201':
+          description: link created
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Attestation"
+        '400':
+          $ref: '#/components/responses/Error'
+        '500':
+          $ref: '#/components/responses/Error'
+          
+##############################################################
+#                                                            #
+#    End Attestation Paths                                   #
+#                                                            #
+##############################################################
            
   /supplychains/{supplyChainId}/verification:
     post:
@@ -1210,7 +1287,7 @@ paths:
             type: array
             maxItems: 4096
             items:
-              $ref: "#/components/schemas/SHA256Hash"
+              $ref: "#/components/schemas/HashString"
         - name: paths
           in: query
           required: false
@@ -1412,7 +1489,7 @@ paths:
             type: array
             maxItems: 32
             items:
-              $ref: "#/components/schemas/SHA256Hash"
+              $ref: "#/components/schemas/HashString"
         - name: inactiveKeyIds
           in: query
           required: false
@@ -1421,7 +1498,7 @@ paths:
             type: array
             maxItems: 32
             items:
-              $ref: "#/components/schemas/SHA256Hash"
+              $ref: "#/components/schemas/HashString"
       responses:
         '200':
           description: list of personal accounts without roles property
@@ -1509,10 +1586,10 @@ components:
       maxLength: 1024
       pattern: '^[0-9a-f]*$'
 
-    SHA256Hash:
+    HashString:
       type: string
-      minLength: 64
-      maxLength: 64
+      minLength: 24
+      maxLength: 128
       pattern: '^[0-9a-f]*$'
 
     UUID:
@@ -1540,7 +1617,7 @@ components:
       minLength: 1
       maxLength: 255
       pattern: '^(([a-z]|[a-z][a-z0-9\-]{0,61}[a-z0-9])\.)*([a-z]|[a-z][a-z0-9\-]{0,61}[a-z0-9])$'
-
+      
     ArtifactArray:
       type: array
       maxItems: 12288
@@ -1686,7 +1763,7 @@ components:
         - uri
       properties:
         hash:
-          $ref: "#/components/schemas/SHA256Hash"
+          $ref: "#/components/schemas/HashString"
         uri:
           $ref: "#/components/schemas/UnixPath"
     
@@ -1764,7 +1841,7 @@ components:
           minItems: 1
           maxItems: 256
           items:
-            $ref: "#/components/schemas/SHA256Hash"
+            $ref: "#/components/schemas/HashString"
         expectedEndProducts:
           type: array
           minItems: 1
@@ -1880,7 +1957,7 @@ components:
           maximum: 20
 
     KeyId:
-      $ref: "#/components/schemas/SHA256Hash"
+      $ref: "#/components/schemas/HashString"
 
     KeyAlgorithm:
       enum:
@@ -1981,6 +2058,7 @@ components:
         - READ
         - WRITE
         - ROLE_WRITE
+        - ATTESTATION_ADD
         - LINK_ADD
         - RELEASE
     
@@ -2180,7 +2258,7 @@ components:
           minItems: 1
           maxItems: 4096
           items:
-            $ref: "#/components/schemas/SHA256Hash"
+            $ref: "#/components/schemas/HashString"
 
     OAuthProvider:
       type: object
@@ -2195,4 +2273,156 @@ components:
       properties:
         token:
           type: string
+          
+##############################################################
+#                                                            #
+#    Attestation Components                                  #
+#                                                            #
+##############################################################
+    Attestation:
+      type: object
+      properties:
+        envelope:
+          $ref: '#/components/schemas/Envelope'
+        supplyChainId:
+          $ref: '#/components/schemas/UUID'
+      
+    Envelope:
+      type: object
+      properties:
+        payload:
+          $ref: '#/components/schemas/InTotoStatement'
+        signatures:
+          type: array
+          items:
+            $ref: '#/components/schemas/Signature'
+        
+    InTotoStatement:
+      type: object
+      required:
+      - subject
+      - predicate
+      - predicateType
+      properties:
+        _type:
+          type: string
+          format: url
+        predicate:
+          $ref: "#/components/schemas/Provenance"
+        predicateType:
+          type: string
+          format: url
+        subject:
+          type: array
+          items:
+            $ref: "#/components/schemas/ResourceDescriptor"
+          
+
+#    ResourceDescriptor:
+#      type: object
+#      properties:
+#        name:
+#          type: string
+#        uri:
+#          type: string
+#          format: uri
+#        digest:
+#          $ref: "#/components/schemas/Digest"
+
+    ResourceDescriptor:
+      type: object
+      required:
+      - uri
+      - argosDigest
+      properties:
+        argosDigest:
+          $ref: "#/components/schemas/ArgosDigest"
+        digest:
+          $ref: "#/components/schemas/Digest"
+        uri:
+          type: string
+          format: uri
+
+    Digest:
+      type: object
+      required:
+      - sha256
+      properties:
+        sha256:
+          $ref: "#/components/schemas/HashString"
+
+    ArgosDigest:
+      type: object
+      required:
+        - hash
+        - hashAlgorithm
+      properties:
+        hash:
+          $ref: '#/components/schemas/HashString'
+        algorithm:
+          $ref: '#/components/schemas/HashAlgorithm'
+      
+    Provenance:
+      type: object
+      required:
+      - buildDefinition
+      - runDetails
+      properties:
+        buildDefinition:
+          $ref: "#/components/schemas/BuildDefinition"
+        runDetails:
+          $ref: "#/components/schemas/RunDetails"
+    
+    BuildDefinition:
+      type: object
+      properties:
+        buildType:
+          type: string
+        externalParameters:
+          type: object
+        internalParameters:
+          type: object
+        resolvedDependencies:
+          type: array
+          items:
+            $ref: "#/components/schemas/ResourceDescriptor"
+  
+    RunDetails:
+      type: object
+      properties:
+        builder:
+          $ref: "#/components/schemas/Builder"
+        byproducts:
+          type: array
+          items:
+            $ref: "#/components/schemas/ResourceDescriptor"
+        metadata:
+          $ref: "#/components/schemas/MetaData"
+  
+    Builder:
+      type: object
+      properties:
+        builderDependencies:
+          type: array
+          items:
+            $ref: "#/components/schemas/ResourceDescriptor"
+        id:
+          type: string
+        version: 
+          type: object
+          additionalProperties:
+            type: string
+    
+    MetaData:
+      type: object
+      properties:
+        finishedOn:
+          type: string
+          maxLength: 23
+        invocationId:
+          type: string
+        startedOn:
+          type: string
+          maxLength: 23
+  
 
